RESOLVED FIXED98968
REGRESSION: Unable to scroll with trackpad on some websites after r130783
https://bugs.webkit.org/show_bug.cgi?id=98968
Summary REGRESSION: Unable to scroll with trackpad on some websites after r130783
Beth Dakin
Reported 2012-10-10 16:40:54 PDT
http://trac.webkit.org/changeset/130783 broke scrolling on some internal Apple websites. The bug also affects bugs.webkit.org for me sometimes. Unfortunately, I do not have a reduced test case because the bug fails to reproduce when you save sites locally. <rdar://problem/12471825> Patch forthcoming.
Attachments
Patch (6.48 KB, patch)
2012-10-10 16:53 PDT, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2012-10-10 16:53:14 PDT
Simon Fraser (smfr)
Comment 2 2012-10-10 18:00:27 PDT
Comment on attachment 168095 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=168095&action=review > Source/WebCore/page/scrolling/ScrollingStateScrollingNode.cpp:85 > + m_changedProperties = ViewportRect | ContentsSize | NonFastScrollableRegion | WheelEventHandlerCount > + | ShouldUpdateScrollLayerPositionOnMainThread | HorizontalScrollElasticity | VerticalScrollElasticity > + | HasEnabledHorizontalScrollbar | HasEnabledVerticalScrollbar | HorizontalScrollbarMode > + | VerticalScrollbarMode | ScrollOrigin | RequestedScrollPosition; Would be nicer if the enum had an 'All' value that was 0xFF or the OR of all the values.
Beth Dakin
Comment 3 2012-10-10 18:25:11 PDT
Thanks Simon! I added an All value. http://trac.webkit.org/changeset/130989
Note You need to log in before you can comment on or make changes to this bug.